test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_ptr_subtraction.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  *
  identifier(ptr)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  identifier(ptr)
  -
  identifier(ptr)
  )
  ==
  const int(0)
  ;
  }
